Blanked out server options by default, this makes it so admins have to opt-in to the options as opposed to having to opt-out